# loan-defaulter-prediction-study

./: README  main.py  pyproject.toml  readme.md
data/: dataset_description.txt  dataset_download.py  dataset_download_kaggle.py  dataset_download_ucimlrepo.py  readme.md
